# wobblescript

./: .gitignore  CMakeLists.txt
example/: class.wb  class.ws  gamepad.wb  gamepad.ws  hello.wb  loop.wb  loop.ws
src/: CMakeLists.txt  WobbleScript.g4  WobbleScriptLexer.g4  WobbleScriptLexer.tokens  WobbleScriptParser.g4
wobblescript/: CMakeLists.txt
wobblescript/analysis/: analyzer.cc  analyzer.h  data_flow_graph.cc  data_flow_graph.h  module.cc  module.h  object.cpp  object.h  object_or_type.cc  object_or_type.h  statement.cc  statement.h  symbol.cc  symbol.h  symbol_table.cc  symbol_table.h  type.cc  type.h
wobblescript/bytecode/: bytecode_writer.cc  bytecode_writer.h
wobblescript/c/: c_api.h
wobblescript/ir/: binary_artifact.cc  binary_artifact.h  block.cc  block.h  constant_value.cc  constant_value.h  function.cc  function.h  instruction.cc  instruction.h  ir.h  linked_program.cc  linked_program.h  return_instruction.cc  return_instruction.h  statement.h  value.cc  value.h
wobblescript/jit/: interpreter.cc  interpreter.h
